--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,7 +6,138 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 162.19.59.168
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id002
     name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 80.251.214.235
+    port: 80
+    cipher: auto
+    uuid: 2048a230-35f8-4940-ea64-02d2375df9cd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tms.dingtalk.com
+  - &id003
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 3.254.128.82
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国_1
+    type: ss
+    server: foshan.chiguayun.cc
+    port: 27133
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id005
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国_1
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27120
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国_2
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27123
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id007
+    name: 🇨🇳_CN_中国_2
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27133
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id008
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: ss
+    server: foshan.chiguayun.cc
+    port: 27131
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id009
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 206.168.240.113
+    port: 35425
+    cipher: auto
+    uuid: 78e34495-c417-48d9-e592-8625f26611c7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /jdbp606
+  - &id010
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ss
+    server: foshan.chiguayun.cc
+    port: 27138
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27121
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id012
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27124
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id013
+    name: 🇫🇮_FI_芬兰
+    type: trojan
+    server: fi1.connecton.surf
+    port: 443
+    udp: true
+    password: 44c5578a7c
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 185.199.224.245
+    port: 41111
+    password: dongtaiwang.com
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ss
+    server: hefei.chiguayun.cc
+    port: 27140
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇨🇳_CN_中国_3
+    type: ss
+    server: foshan.chiguayun.cc
+    port: 27121
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 45.199.138.186
     port: 30000
@@ -20,169 +151,7 @@ proxies:
       path: /path/1696598013851
       headers:
         host: www.19229362.xyz
-  - &id002
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.152
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca4690dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696598013851
-      headers:
-        host: www.32522178.xyz
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: iran02.biqibao.site
-    port: 2052
-    cipher: auto
-    uuid: 9410cc20-c35d-45ed-b3ad-db18716dec30
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /public
-      headers:
-        host: de4.biqibao.site
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: usshs2.gophers.gay
-    port: 20800
-    password: f5d95005-be14-40fc-bedc-e4a1133a5701
-    cipher: chacha20-ietf-poly1305
-  - &id005
-    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
-    type: ss
-    server: ydyh.nanbei.info
-    port: 26902
-    password: cdb06941-b4e8-4aeb-8cd5-62c129edd075
-    cipher: chacha20-ietf-poly1305
-  - &id006
-    name: 🇬🇧_GB_英国->🇺🇸_US_美国
-    type: vmess
-    server: best.fakeopen.link
-    port: 2096
-    cipher: auto
-    uuid: 12859d73-1c81-4909-e071-c1aacfeea221
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /us
-      headers:
-        host: us2.fakeopen.link
-  - &id007
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: ss
-    server: uk.shawbrothersstudio.com
-    port: 19923
-    password: yCf03vE7phaImZaVjeAF3L
-    cipher: chacha20-ietf-poly1305
-  - &id008
-    name: 🇹🇼_TW_台湾
-    type: vmess
-    server: 46caadb.f2.gladns.com
-    port: 3331
-    cipher: auto
-    uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /s/46caadb.fm.apple.com:60980
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: www.75409854.xyz
-    port: 443
-    cipher: auto
-    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694429908748
-      headers:
-        host: www.75409854.xyz
-  - &id010
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 67.21.90.5
-    port: 443
-    cipher: auto
-    uuid: 28dd6c26-05a5-4bba-8a5d-052b70ac13b2
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1694429908748
-      headers:
-        host: www.75409854.xyz
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 24.199.111.70
-    port: 22222
-    cipher: auto
-    uuid: 2ef8e4ba-187d-4d50-d1eb-99ae641e3df8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id012
-    name: 🇨🇳_CN_中国->🇮🇱_IL_以色列
-    type: vmess
-    server: 103.235.18.2
-    port: 10005
-    cipher: auto
-    uuid: a783230b-cd66-4492-9517-7f6cf569e1c9
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vm?ed=2048
-      headers:
-        host: ylsl.kxking.eu.org
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: www.speedtest.net
-    port: 80
-    cipher: auto
-    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hu1.xv2ray.net
-  - &id014
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 99.80.79.181
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id015
+  - &id018
     name: 🇺🇸_US_美国->🇱🇺_LU_卢森堡
     type: vmess
     server: 162.159.152.6
@@ -197,20 +166,15 @@ proxies:
       path: /
       headers:
         host: lu.wx.alue.link
-  - &id016
-    name: 🇺🇸_US_美国_8
+  - &id019
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
     type: ss
-    server: 216.52.183.243
-    port: 1001
-    password: 83XvX4Vo%*3a
-    cipher: aes-128-gcm
-    plugin: v2ray-plugin
-    plugin-opts:
-      mode: websocket
-      path: /
-      mux: true
-  - &id017
-    name: 🇺🇸_US_美国_9
+    server: yidong.liulangdiqiu.cyou
+    port: 10712
+    password: 51239bce-01ab-454d-baa5-c0940c9f1751
+    cipher: chacha20-ietf-poly1305
+  - &id020
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: ns1.v2-vip.fun
     port: 8080
@@ -224,28 +188,43 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v002.ssrsub.com
-  - &id018
-    name: 🇺🇸_US_美国_10
+  - &id021
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: cf-lt.sharecentre.online
-    port: 8080
+    server: 104.18.35.28
+    port: 443
     cipher: auto
-    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /odelia.autos:443/linkvws
       headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id019
-    name: 🇫🇷_FR_法国
+        host: sub.yifenjichang.top
+  - &id022
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 45.199.138.191
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696251522438
+      headers:
+        host: www.42077230.xyz
+  - &id023
+    name: 🇨🇳_CN_中国->🇧🇬_BG_保加利亚
     type: ss
-    server: 54.36.174.181
-    port: 2376
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
+    server: foshan.chiguayun.cc
+    port: 27127
+    password: d376f270-1807-4522-9f92-b499658a2678
+    cipher: chacha20-ietf-poly1305
 proxy-groups:
   - name: PROXY
     type: select
@@ -291,6 +270,10 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -315,6 +298,10 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
   - name: SELECT
     type: select
     proxies:
@@ -337,6 +324,10 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
