--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,7 +6,22 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: hdlb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: hdlb2.shabijichang.com
+  - &id002
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
     server: mrb2.shabijichang.com
     port: 80
@@ -20,138 +35,8 @@ proxies:
       path: /
       headers:
         host: mrb2.shabijichang.com
-  - &id002
-    name: 🇮🇪_IE_爱尔兰_1
-    type: trojan
-    server: 54.216.221.117
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
   - &id003
     name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 8080
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id004
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2095
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id005
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 8880
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id006
-    name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
-    type: vmess
-    server: jd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd3.shabijichang.com
-  - &id007
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 5.104.107.143
-    port: 443
-    udp: true
-    password: 3ed4d5f3-68e9-42fc-978a-22afc2523e5a
-    sni: de1.xn--mes358a9urctx.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2052
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id009
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10848
-    udp: true
-    password: 9daf849c-6310-4fa4-9855-65049737216b
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: shenzhoul.nices.pro
-    port: 37539
-    cipher: auto
-    uuid: 865897ad-8d07-4021-b7c3-d8eb4a29ee8d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /xtsmol
-      headers:
-        host: shenzhoul.nices.pro
-  - &id011
-    name: 🇮🇪_IE_爱尔兰_2
-    type: trojan
-    server: 52.215.170.185
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
     type: vmess
     server: freeyx.cloudflare88.eu.org
     port: 2086
@@ -165,49 +50,121 @@ proxies:
       path: /服务器4元月，节点2.5元月@natdcibot
       headers:
         host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id013
+  - &id004
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 195.123.240.170
-    port: 41916
+    server: asb2.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 12772df9-485f-413c-edbf-3f562d61de4e
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: asb2.shabijichang.com
+  - &id005
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: ld2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ld2.shabijichang.com
+  - &id006
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm2.shabijichang.com
+  - &id007
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 45.199.138.191
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696251522438
+      headers:
+        host: www.42077230.xyz
+  - &id008
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10848
+    udp: true
+    password: 9daf849c-6310-4fa4-9855-65049737216b
+    sni: alibaba-node.cn
     skip-cert-verify: true
     network: tcp
-  - &id014
+  - &id009
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: 62.60.164.167
+    port: 36361
+    cipher: auto
+    uuid: c5d4d8f6-865d-4450-94f4-250154b60072
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /g8ze2gzro72m
+  - &id010
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 2052
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id011
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.21.75.246
-    port: 80
+    server: 45.199.138.186
+    port: 30000
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1697376782879
       headers:
-        host: sbl2.shabijichang.com
-  - &id015
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.67.184.13
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
+        host: www.19229362.xyz
+  - &id012
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
     type: vmess
     server: freeyx.cloudflare88.eu.org
     port: 2082
@@ -221,25 +178,10 @@ proxies:
       path: /服务器4元月，节点2.5元月@natdcibot
       headers:
         host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id017
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+  - &id013
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 104.24.184.65
-    port: 2096
-    cipher: auto
-    uuid: ddde9cc7-00b1-4637-ce42-ccf7ceb0d612
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1.shargh.shop
-  - &id018
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: ns1.v2-vip.fun
+    server: cf-lt.sharecentre.online
     port: 8080
     cipher: auto
     uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
@@ -250,27 +192,32 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v002.ssrsub.com
-  - &id019
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 172.67.229.17
-    port: 8080
-    cipher: auto
-    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
-    alterId: 0
-    tls: false
+        host: ssrsub.v001.ssrsub.com
+  - &id014
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 52.31.73.109
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v002.ssrsub.com
-  - &id020
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_7
+    network: tcp
+  - &id015
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 18.156.64.145
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
     type: vmess
     server: freeyx.cloudflare88.eu.org
-    port: 80
+    port: 8080
     cipher: auto
     uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
     alterId: 0
@@ -281,6 +228,66 @@ proxies:
       path: /服务器4元月，节点2.5元月@natdcibot
       headers:
         host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id017
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 8880
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id018
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: wnd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd2.shabijichang.com
+  - &id019
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
+    type: vmess
+    server: freeyx.cloudflare88.eu.org
+    port: 2095
+    cipher: auto
+    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /服务器4元月，节点2.5元月@natdcibot
+      headers:
+        host: jd2kuai5yuan.cloudflare88.eu.org
+  - &id020
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: vmess
+    server: 104.16.181.135
+    port: 2052
+    cipher: auto
+    uuid: 6963920a-8bb3-4f87-b231-56ccb9f9b3a7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vceu3.vpn66.eu.org
 proxy-groups:
   - name: PROXY
     type: select
