--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,163 +6,28 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_1
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2086
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
+    name: 🇦🇫_AF_阿富汗
+    type: ss
+    server: 121.127.46.147
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
   - &id002
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_2
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2082
+    server: 104.26.0.2
+    port: 80
     cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    uuid: 541ea7b0-23c1-4590-ad1b-18e6f58758d7
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
+      path: /@daozhang6666
       headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
+        host: usa.daozhang.link
   - &id003
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.195.96
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.195.96
-    port: 110
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_3
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 80
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id006
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_4
-    type: vmess
-    server: 104.26.1.116
-    port: 2052
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id007
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_5
-    type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 443
-    cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
-      headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: trojan
-    server: nl01.lovehjq.xyz
-    port: 41929
-    udp: true
-    password: 09833a6f-4d46-426e-87fe-7793a5489f84
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇺🇸_US_美国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: www.speedtest.net
-    port: 80
-    cipher: auto
-    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hu1.xv2ray.net
-  - &id010
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 62.210.88.167
-    port: 80
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: flkf2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: flkf2.shabijichang.com
-  - &id012
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id013
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 62.210.88.167
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id014
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
     server: mm3.shabijichang.com
@@ -177,7 +42,84 @@ proxies:
       path: /
       headers:
         host: mm3.shabijichang.com
-  - &id015
+  - &id004
+    name: 🇺🇸_US_美国_2
+    type: ss
+    server: 89.187.179.192
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 54.76.165.95
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: jd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jd2.shabijichang.com
+  - &id007
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: fhc2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fhc2.shabijichang.com
+  - &id008
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: wnd3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd3.shabijichang.com
+  - &id009
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
+    type: vmess
+    server: 45.199.138.191
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696251522438
+      headers:
+        host: www.42077230.xyz
+  - &id010
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: hdlb2.shabijichang.com
@@ -192,26 +134,93 @@ proxies:
       path: /
       headers:
         host: hdlb2.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_6
+  - &id011
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 8080
+    server: mrb2.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
+      path: /
       headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
+        host: mrb2.shabijichang.com
+  - &id012
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: asb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: asb2.shabijichang.com
+  - &id013
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 54.186.250.178
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.16.181.135
+    port: 2052
+    cipher: auto
+    uuid: 6963920a-8bb3-4f87-b231-56ccb9f9b3a7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: vceu3.vpn66.eu.org
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 172.67.184.13
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
   - &id017
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_7
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
     type: vmess
     server: freeyx.cloudflare88.eu.org
-    port: 2095
+    port: 80
     cipher: auto
     uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
     alterId: 0
@@ -223,51 +232,85 @@ proxies:
       headers:
         host: jd2kuai5yuan.cloudflare88.eu.org
   - &id018
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_8
+    name: 🇺🇸_US_美国_10
     type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 8880
+    server: sbl3.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
+      path: /
       headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
+        host: sbl3.shabijichang.com
   - &id019
-    name: 🇺🇸_US_美国->🇧🇷_BR_巴西_9
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: freeyx.cloudflare88.eu.org
-    port: 2052
+    server: flkf2.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: 8a6fb1b7-d939-4030-a4da-1c0b2637c865
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /服务器4元月，节点2.5元月@natdcibot
+      path: /
       headers:
-        host: jd2kuai5yuan.cloudflare88.eu.org
+        host: flkf2.shabijichang.com
   - &id020
-    name: 🇺🇸_US_美国_1
+    name: 🇬🇧_GB_英国_1
     type: vmess
-    server: 156.225.67.104
-    port: 30000
+    server: 172.99.190.109
+    port: 443
     cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
-    alterId: 64
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1696944806961
-      headers:
-        host: www.41758112.xyz
+      path: linkvws
   - &id021
+    name: 🇫🇮_FI_芬兰_1
+    type: trojan
+    server: fi1.connecton.surf
+    port: 443
+    udp: true
+    password: 44c5578a7c
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇫🇮_FI_芬兰_2
+    type: trojan
+    server: 37.143.129.56
+    port: 443
+    udp: true
+    password: 44c5578a7c
+    sni: fi1.connecton.surf
+    skip-cert-verify: true
+    network: tcp
+  - &id023
+    name: 🇺🇸_US_美国_11
+    type: trojan
+    server: 209.216.77.26
+    port: 443
+    udp: true
+    password: 1b491c39f3
+    sni: usa3.connecton.surf
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇩🇪_DE_德国
+    type: ss
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
+    cipher: aes-256-cfb
+  - &id025
     name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
     server: jd3.shabijichang.com
@@ -282,107 +325,7 @@ proxies:
       path: /
       headers:
         host: jd3.shabijichang.com
-  - &id022
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 45.199.138.186
-    port: 30000
-    cipher: auto
-    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1697376782879
-      headers:
-        host: www.19229362.xyz
-  - &id023
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id024
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.21.75.246
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id025
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
-    type: vmess
-    server: mrb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mrb2.shabijichang.com
   - &id026
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10848
-    udp: true
-    password: 9daf849c-6310-4fa4-9855-65049737216b
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: sbl3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl3.shabijichang.com
-  - &id028
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: de3.jiedian.stream
-    port: 80
-    cipher: auto
-    uuid: ffb48d4a-eb46-4609-82a4-62eccc37e54c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: de3.jiedian.stream
-  - &id029
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
     type: vmess
     server: mm2.shabijichang.com
@@ -397,31 +340,41 @@ proxies:
       path: /
       headers:
         host: mm2.shabijichang.com
-  - &id030
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 8080
-    cipher: auto
-    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v001.ssrsub.com
-  - &id031
-    name: 🇮🇪_IE_爱尔兰
+  - &id027
+    name: 🇬🇧_GB_英国_2
     type: trojan
-    server: 52.31.73.109
+    server: 3.11.11.241
     port: 22222
     udp: true
     password: telegram-id-privatevpns
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
+  - &id028
+    name: 🇬🇧_GB_英国_3
+    type: trojan
+    server: 18.169.124.35
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 156.225.67.104
+    port: 30000
+    cipher: auto
+    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696944806961
+      headers:
+        host: www.41758112.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -477,8 +430,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -513,8 +464,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
   - name: SELECT
     type: select
     proxies:
@@ -547,8 +496,6 @@ proxy-groups:
       - *id027
       - *id028
       - *id029
-      - *id030
-      - *id031
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
